feat: add Tailwind CDN to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,17 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><title>Device Box Tracker</title></head><body><div id='root'></div><script type='module' src='/src/main.jsx'></script></body></html>
+<!DOCTYPE html>
+<html lang="de">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Device Box Tracker</title>
+
+    <!-- Tailwind CSS 3.x direkt vom CDN -->
+    <script src="https://cdn.tailwindcss.com/3.4.4"></script>
+  </head>
+
+  <body class="bg-gray-50 text-gray-900">
+    <div id="root"></div>
+
+    <!-- dein React-Entry -->
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
