--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,8 @@
     <meta charset="utf-8" />
     <title>Device Box Tracker</title>
 
-    <!--  DaisyUI + Tailwind v4 CDN  -->
-    <script src="https://cdn.tailwindcss.com/3.4.4?plugins=typography"></script>
-    <script>
-      tailwind.config = { plugins: [daisyui], daisyui: { theme: "light" } };
-    </script>
+    <!-- Tailwind + DaisyUI direkt über CDN (kein fehlerhaftes Inline-Script mehr) -->
+    <script src="https://cdn.tailwindcss.com/3.4.4?plugins=typography,daisyui"></script>
   </head>
 
   <body class="bg-base-200 min-h-screen">
