--- a/client/index.html
+++ b/client/index.html
@@ -4,20 +4,19 @@
     <meta charset="utf-8" />
     <title>Device Box Tracker</title>
 
-    <!-- 1) Tailwind + typography-Plugin (funktioniert mit CDN) -->
+    <!-- Tailwind CDN (nur typography-Plugin) -->
     <script src="https://cdn.tailwindcss.com/3.4.4?plugins=typography"></script>
 
-    <!-- 2) DaisyUI als fertig kompilierte CSS-Datei nachladen -->
+    <!-- DaisyUI-Styles als fertiges CSS -->
     <link
-      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/daisyui@4.4.2/dist/full.css"
+      rel="stylesheet"
     />
   </head>
 
   <body class="bg-base-200 min-h-screen">
     <div id="root"></div>
 
-    <!-- React-Entry -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
