--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,8 @@
     <meta charset="utf-8" />
     <title>Device Box Tracker</title>
 
-    <!-- Tailwind CDN (nur typography-Plugin) -->
-    <script src="https://cdn.tailwindcss.com/3.4.4?plugins=typography"></script>
-
-    <!-- DaisyUI-Styles als fertiges CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/daisyui@4.4.2/dist/full.css"
-      rel="stylesheet"
-    />
+    <!-- ⚠️  KEINE CDN-Scripts mehr – Tailwind & DaisyUI stecken im Vite-Bundle -->
+    <!-- Beim Build injiziert Vite automatisch /assets/index-xxxxx.css -->
   </head>
 
   <body class="bg-base-200 min-h-screen">
