--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Device Box Tracker</title>
-    <!-- Keine CDN-Skripte mehr: Tailwind + DaisyUI stecken im Vite-Bundle,
-         Vite injiziert beim Build einen <link href="/assets/index-xxxxx.css"> -->
+    <!-- Keine CDN-Skripte: Tailwind & DaisyUI werden lokal gebaut -->
   </head>
-
   <body class="bg-base-200 min-h-screen">
     <div id="root"></div>
-
-    <!-- React-Einstieg -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
